 ! Changed player data saving. Save tasks are now asynchronous
 ! Vanished players no longer get hit by AoE effects
 ! Changed Alchemy config option 'Prevent_Hopper_Transfer' renamed to 'Prevent_Hopper_Transfer_Ingredients'
 ! Changed Alchemy XP distribution. XP is granted based on the stage of the potion.
 ! Updated for new getOnlinePlayers() behavior
 - Removed salvage ability from Repair, salvage has it's own (child) skill now

Version 1.5.00
 + Added Podzol & Red Sand to Excavation
 + Added Hardened Clay, Stained Clay, and Packed Ice to Mining blocks
 + Added Acacia and Dark Oak to Woodcutting blocks
 + Added Salmon, Clownfish, and Pufferfish to Fishing XP
 + Added new flowers and grasses to Herbalism XP
 + Added option to config.yml which allows players to always catch fish, even when a treasure is found
 + Added option to config.yml to override vanilla Minecraft treasures
 ! Fishing XP now depends on the type of fish.
 ! Woodcutting XP in experience.yml and Woodcutting double drops in config.yml now use the tree species names. Oak is now Generic, and Spruce is now Redwood.
 ! Red_Rose was replaced by Poppy, and so the key in experience.yml has been updated accordingly.
 - Removed deprecated permission nodes
 - Removed "Treasure found!" message

Version 1.4.08
 + Added a new skill; Alchemy. Special thanks to EasyMFnE for creating this!
 + Added SecondaryAbilityType enum, and new SecondaryAbilityWeightedActivationCheckEvent, fired when a secondary ability checkes its activation chances
 + Added the possibility to gain experience when using Fishing "Shake"
 + Added config options to disable various sound effects
 + Smelting now works with custom ores - add smelting XP value to blocks.yml, or it will default to 1/10th of normal XP.
 + Added automatic cleanup of backups folder.
 + Added bypass permission for finding Fishing traps
 + Added level threshold settings to hardcore modes. When a players skill level is below this threshold, they will not lose any stats