@@ -199,6 +199,13 @@ public class ScoreboardWrapper {
 
         // TODO is there any way to do the time that looks acceptable?
         // player.sendMessage(LocaleLoader.getString("Commands.Scoreboard.Timer", StringUtils.capitalize(sidebarType.toString().toLowerCase()), ticks / 20F));
+
+        PlayerProfile profile = UserManager.getPlayer(player).getProfile();
+
+        if (profile.getScoreboardTipsShown() >= Config.getInstance().getTipsAmount()) {
+            return;
+        }
+
         if (!tippedKeep) {
             tippedKeep = true;
             player.sendMessage(LocaleLoader.getString("Commands.Scoreboard.Tip.Keep"));
@@ -206,6 +213,7 @@ public class ScoreboardWrapper {
         else if (!tippedClear) {
             tippedClear = true;
             player.sendMessage(LocaleLoader.getString("Commands.Scoreboard.Tip.Clear"));
+            profile.increaseTipsShown();
         }
     }
 
