@@ -34,6 +34,7 @@ Version 1.5.01-dev
  ! Changed Alchemy config option 'Prevent_Hopper_Transfer' renamed to 'Prevent_Hopper_Transfer_Ingredients'
  ! Changed Alchemy XP distribution. XP is granted based on the stage of the potion.
  ! Updated for new getOnlinePlayers() behavior
+ ! Scoreboard tips are only shown a couple of times to the player, instead of once per login session
  - Removed salvage ability from Repair, salvage has it's own (child) skill now
 
 Version 1.5.00
